:sparkles: add: navigation pages - hasbackbutton, push and pop

--- a/AppGallery/AppGallery/AppGallery/xamarinForms/paginas/paginasDeNavegacao/conteudo01.xaml
+++ b/AppGallery/AppGallery/AppGallery/xamarinForms/paginas/paginasDeNavegacao/conteudo01.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppGallery.xamarinForms.paginas.paginaDeConteudo.conteudo01">
+               NavigationPage.HasBackButton="False"
+             Title="conteudo 1"
+             x:Class="AppGallery.xamarinForms.paginas.paginasDeNavegacao.conteudo01">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="conteudo 1!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+
+            <Button Text="PushAsync - Pagina 02" Clicked="AbrirPagina02"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
