:sparkles: add menu lateral

--- a/AppGallery/AppGallery/AppGallery/xamarinForms/paginas/paginaMenuLateral/conteudo1menu.xaml
+++ b/AppGallery/AppGallery/AppGallery/xamarinForms/paginas/paginaMenuLateral/conteudo1menu.xaml
@@ -8,6 +8,8 @@
             <Label Text="pagina 1 menu"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+
+            <Button Text="abrir menu" Clicked="abrirMenu" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
